# DatingApp

./: .gitignore  CLAUDE.local.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml  main.cpp  run_claude.sh  start.sh
.github/workflows/: deploy.yml  lint.yml
bipartite_matching/tests/: test_bipartite.cpp
blossom_matching/tests/: test_blossom.cpp
db/: schema.sql
examples/: dating_app.cpp  group_dating.cpp  inclusive_dating.cpp
server/: CMakeLists.txt  db_manager.cpp  db_manager.h  server.cpp
server/static/: index.html
src/: CMakeLists.txt  blossom.cpp  blossom.h  gale_shapley.cpp  gale_shapley.h  hopcroft_karp.cpp  hopcroft_karp.h  hungarian.cpp
src/tests/: CMakeLists.txt  test_blossom.cpp  test_gale_shapley.cpp  test_hopcroft_karp.cpp  test_hungarian.cpp
stable_matching/tests/: test_gale_shapley.cpp
